# pointBasedRendering

./: .gitignore  CMakeLists.txt  README.txt
framebuffers/: CMakeLists.txt  main.cpp
pointRenderer/: CMakeLists.txt  main.cpp
resources/models/: cube.txt  quad.txt  spherePoints100.txt
resources/shaders/: pointFragmentShader.frag  pointVertexShader.vert  sceneFragmentShader.frag  sceneVertexShader.vert  screenFragmentShader.frag  screenVertexShader.vert
sphereSampler/: README.txt  sampleUnitSphere.m
utils/: resourceLoader.h  surfel.h
