CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SOIL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${UTILS})

ADD_EXECUTABLE(framebuffers main.cpp)

TARGET_LINK_LIBRARIES(framebuffers ${GLFW_LIBRARIES})
TARGET_LINK_LIBRARIES(framebuffers ${GLEW_LIBRARY})
TARGET_LINK_LIBRARIES(framebuffers ${SOIL_LIBRARY})
TARGET_LINK_LIBRARIES(framebuffers ${EXTRA_LIBS} )