CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SOIL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${UTILS})

ADD_EXECUTABLE(pointRenderer main.cpp)

TARGET_LINK_LIBRARIES(pointRenderer ${GLFW_LIBRARIES})
TARGET_LINK_LIBRARIES(pointRenderer ${GLEW_LIBRARY})
TARGET_LINK_LIBRARIES(pointRenderer ${SOIL_LIBRARY})
TARGET_LINK_LIBRARIES(pointRenderer ${EXTRA_LIBS} )